<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">NBP Navigator</string>

  <string name="label_settings_activity">NBP Navigator Settings</string>
  <string name="label_settings_button">Settings</string>

  <string name="section_accuracy">Measurement Accuracy</string>
  <string name="label_accuracy_satellites">Satellites</string>
  <string name="label_accuracy_position">Position</string>
  <string name="label_accuracy_altitude">Altitude</string>
  <string name="label_accuracy_speed">Speed</string>
  <string name="label_accuracy_bearing">Bearing</string>

  <string name="section_address">Geocoded Location</string>
  <string name="label_address_place">Place</string>
  <string name="label_address_distance">Distance</string>
  <string name="label_address_heading">Direction</string>

  <string name="section_motion">Physical Motion</string>
  <string name="label_motion_speed">Speed</string>
  <string name="label_motion_bearing">Bearing</string>

  <string name="section_orientation">Device Orientation</string>
  <string name="label_orientation_heading">Heading</string>
  <string name="label_orientation_pitch">Pitch</string>
  <string name="label_orientation_roll">Roll</string>

  <string name="section_position">Terrestrial Position</string>
  <string name="label_position_altitude">Altitude</string>
  <string name="label_position_latitude">Latitude</string>
  <string name="label_position_longitude">Longitude</string>

  <string name="message_unknown">(unknown)</string>
  <string name="message_unsupported">(unsupported)</string>
  <string name="message_waiting">(waiting)</string>

  <string name="direction_north">north</string>
  <string name="direction_east">east</string>
  <string name="direction_south">south</string>
  <string name="direction_west">west</string>

  <string name="direction_left">left</string>
  <string name="direction_right">right</string>

  <string name="menu_about">About</string>
  <string name="menu_settings">Settings</string>

  <string name="about_version_number">Version Number</string>
  <string name="about_build_time">Build Time</string>
  <string name="about_source_revision">Source Revision</string>
</resources>
