<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:text="@string/section_accuracy"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingRight="@dimen/spacer_width"
   />

  <TableRow android:id="@+id/row_accuracy_satellites">
    <TextView android:text="@string/label_accuracy_satellites" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/accuracy_satellites" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_accuracy_position">
    <TextView android:text="@string/label_accuracy_position" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/accuracy_position" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_accuracy_altitude">
    <TextView android:text="@string/label_accuracy_altitude" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/accuracy_altitude" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_accuracy_speed">
    <TextView android:text="@string/label_accuracy_speed" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/accuracy_speed" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_accuracy_bearing">
    <TextView android:text="@string/label_accuracy_bearing" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/accuracy_bearing" />
    <include layout="@layout/spacer" />
  </TableRow>
</merge>
