<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:text="@string/section_position"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingRight="@dimen/spacer_width"
   />

  <TableRow android:id="@+id/row_position_altitude">
    <TextView android:text="@string/label_position_altitude" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/altitude_magnitude" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_position_latitude">
    <TextView android:text="@string/label_position_latitude" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/latitude_decimal" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/latitude_dms" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_position_longitude">
    <TextView android:text="@string/label_position_longitude" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/longitude_decimal" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/longitude_dms" />
    <include layout="@layout/spacer" />
  </TableRow>
</merge>
