<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:text="@string/section_address"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingRight="@dimen/spacer_width"
   />

  <TableRow android:id="@+id/row_address_place">
    <TextView android:text="@string/label_address_place" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/address_place" android:layout_span="3" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_address_distance">
    <TextView android:text="@string/label_address_distance" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/address_distance" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/address_direction" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_address_heading">
    <TextView android:text="@string/label_address_heading" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/address_degrees" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/address_point" />
    <include layout="@layout/spacer" />
  </TableRow>
</merge>
